Fix gaps part 1

--- a/client/src/elements/Banner.scss
+++ b/client/src/elements/Banner.scss
@@ -37,7 +37,7 @@
 .banner-tagline-content-wrapper {
   display: flex;
   flex-direction: column;
-  gap: $x2_5;
+  @include setGap("medium");
 }
 
 .banner-image {
@@ -53,7 +53,6 @@
   .banner-tagline {
     padding-top: 44px;
     padding-bottom: 52px;
-    gap: $x3;
   }
 }
 
@@ -69,7 +68,6 @@
     max-width: 600px;
     width: 50%;
     padding-top: 56px;
-    gap: $x4;
     box-shadow: none;
 
     h3 {
