--- a/client/src/elements/InfoCard.scss
+++ b/client/src/elements/InfoCard.scss
@@ -13,7 +13,8 @@
   background-color: $color-white;
   box-shadow: $box-shadow-around;
   border-radius: $border-radius;
-  @include setInnerPaddings(false, false, false, "m", false, true, true);
+  @include setInnerPaddings(false, false, false, "m", false, true);
+  @include setGap("medium");
 }
 
 .info-card:not(.info-card-active):hover {
